--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -9,6 +9,7 @@
 	border-radius: 25px;
 	animation-name: modalOpen;
 	animation-duration: 0.3s;
+	border: 1px solid #ccc;
 }
 
 .modalClose {
@@ -23,12 +24,19 @@
 	right: 0px;
 	bottom: 0px;
 	background-color: rgba(0, 0, 0, .7);
+	animation-name: modalOpenOverlay;
+	animation-duration: 0.3s;
 	z-index: 1000px;
 }
 
 @keyframes modalOpen {
 	from {left: 0%;}
 	to {left: 50%;}
+}
+
+@keyframes modalOpenOverlay {
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
 
 @keyframes modalClose {
