login screen + input

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 	--primary: #1e90ff;
 	--white: #ffffff;
 	--grey: #ccc;
+
+	--color1: #00272B;
+	--color2: #E0FF4F;
+	--color3: #FF6663;
+	--color4: #FF2ECC;
+	--color5: #A51080;
+
 }
 
 body {
