--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -1,9 +1,9 @@
 .buttonStyle {
 	padding: 10px 20px;
 	border-radius: 20px;
-	background-color: var(--primary);
+	background-color: #004952;
 	border: transparent;
-	color: white;
+	color: var(--color2);
 	font-size: 15px;
 	box-shadow: 0 0 1px 0px white inset, 0 0 1px 0px white;
 	user-select: none;
