--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -3,13 +3,40 @@
 	border-radius: 20px;
 	background-color: #004952;
 	border: transparent;
-	color: var(--color2);
+	color: white;
 	font-size: 15px;
 	box-shadow: 0 0 1px 0px white inset, 0 0 1px 0px white;
 	user-select: none;
 	outline: none;
+	overflow: hidden;
+	position: relative;
 }
 
 .buttonStyle:focus {
 	box-shadow: 0 0 0 1pt var(--primary);
+}
+
+.rippleContainer {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
+.ripple {
+	transform: scale(0);
+	border-radius: 100%;
+	position: absolute;
+	opacity: 0.75;
+	background-color: #66AFB8;
+	animation-name: ripple;
+	animation-duration: 850ms;
+}
+
+@keyframes ripple {
+	to {
+		opacity: 0;
+		transform: scale(2);
+	}
 }
